2015-01-27  Andrew Burgess  <andrew.burgess@embecosm.com>

	* build-all.sh: Add tls command line flags, and set TLS_SUPPORT
	environment variable.
	* build-uclibc.sh: Check TLS_SUPPORT environment variable to
	control thread and tls support features.

2015-01-22  Andrew Burgess  <andrew.burgess@embecosm.com>

	* run-tests.sh: Remove typo from comment and help text.

2014-12-12  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* README.md: Add git to prerequisites.

2014-12-08  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* arc-versions.sh: Change Linux version to 3.13.

2014-12-04  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* Synopsys_FOSS_Notices.pdf: New file.
	* build-all.sh: Copy legal notice to the install directory.

2014-12-01  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* extras/em_starter_kit/crt0.S: New file.
	* extras/em_starter_kit/em5d.lds: New file.
	* extras/em_starter_kit/em7d.lds: New file.

2014-12-01  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* README.md: Update reference to OpenOCD.

2014-11-21  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* README.md: Update for 2014.12 release.

2014-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-kernel.sh: Tidy up --help option and commenting.

2014-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Upgrade the script for building a kernel from the command
	line. This is not part of the official release, but can be
	convenient for developers.

	* build-kernel.sh: Add proper argument handling to allow control
	of the build.

2014-08-15  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* Makefile.release: Calculate MD5 sums for release tarballs.

2014-08-14  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* windows-installer/build-installer.sh: Copy Eclipse instead of
	moving.

2014-08-06  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* tag-release.sh: Use stable branches for tags, instead of detached
	tags.

2014-08-01  Anton Kolesov  <Anton.Kolesov@synopsys.com>
