@@ -9,6 +9,11 @@
 
 	* run-tests.sh: Remove typo from comment and help text.
 
+2014-12-16  Anton Kolesov  <Anton.Kolesov@synopsys.com>
+
+	* build-elf32.sh: Fix documentation build problem on RHEL6.
+	* build-uclibc.sh: Same.
+
 2014-12-12  Anton Kolesov  <Anton.Kolesov@synopsys.com>
 
 	* README.md: Add git to prerequisites.
